Add status controller and service with getAll and run tests